--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 <body>
 	<h1>Hello GIT</h1>
 
+	<ul>
+		<li>Chossy Aulia</li>
+		<li>Muh Alpin</li>
+	</ul>
+
 	<script src="script.js"></script>
 </body>
 </html>
