Modifikasi file index.html

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 	<title>GIT</title>
 </head>
 <body>
-	<h1>Hello GIT</h1>
+	<h3>Hello GIT</h3>
 
 	<ul>
 		<li>Chossy Aulia</li>
-		<li>Muh Alpin</li>
+		<li>Muh Alpin Arifin</li>
 	</ul>
+
+	<p>Mengapa harus dilakukan hari ini kalau kau bisa melakukannya besok, hahahaha</p>
 
 	<script src="script.js"></script>
 </body>
