modifikasi lagi file index.html

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 	<title>GIT</title>
 </head>
 <body>
-	<h3>Hello GIT</h3>
+	<h1>Hello GIT</h1>
 
 	<ul>
-		<li>Chossy Aulia</li>
 		<li>Muh Alpin Arifin</li>
 	</ul>
 
 	<p>Mengapa harus dilakukan hari ini kalau kau bisa melakukannya besok, hahahaha</p>
 
+	<p>Aku akan bersantai meskipun itu akan membunuhku</p>
 	<script src="script.js"></script>
 </body>
 </html>
