Modifikasi file index.html di branch master

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<ul>
 		<li>Muh Alpin Arifin</li>
 		<li>Africo Mucikari</li>
+		<li>Arif Tenryubito</li>
 	</ul>
 
 	<p>Mengapa harus dilakukan hari ini kalau kau bisa melakukannya besok, hahahaha</p>
