Modifikasi folder Git01

--- a/dosen.html
+++ b/dosen.html
@@ -9,7 +9,7 @@
 	<h1>Dosen</h1>
 	<ul>
 		<li>Africo Fujitora</li>
-		<li>Ganesha Ali Ranan</li>
+		<li>Ganesha Borsalino</li>
 		<li>Arif Tenryubito</li>
 	</ul>
 </body>
