--- a/index.html
+++ b/index.html
@@ -15,18 +15,13 @@
 
 	<ul>
 		<li>Chossy Aulia</li>
-		<li>Muh Alpin</li>
 		<li>Muh Alpin Arifin</li>
-		<li>Africo Mucikari</li>
+		<li>Africo Fujitora</li>
 		<li>Arif Tenryubito</li>
 	</ul>
 
 	<p>Mengapa harus dilakukan hari ini kalau kau bisa melakukannya besok, hahahaha</p>
 
 	<p>Aku akan bersantai meskipun itu akan membunuhku</p>
-
-	<p>Ini lagi di branch bungapasir</p>
-
-	<script src="script.js"></script>
 </body>
 </html>
