Menambah data list

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<li>Muh Alpin Arifin</li>
 		<li>Africo Fujitora</li>
 		<li>Arif Tenryubito</li>
+		<li>Ardi Vegapunk</li>
 	</ul>
 
 	<p>Mengapa harus dilakukan hari ini kalau kau bisa melakukannya besok, hahahaha</p>
